blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/Wholesale_Order__c.object-meta.xml
<CustomObject>
    <description>One order placed by a retailer, first order or reorder, from placement to delivery and payment. This is the fulfilment side and stays separate from the account-acquisition deal.</description>
    <label>Wholesale order</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wholesale orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>