blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/fields/Acquisition_deal__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a first order to the deal that opened the account. Reorders have no deal.</description>
    <label>Acquisition deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders_Acquisition_deal</relationshipName>
    <type>Lookup</type>
</CustomField>