blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/fields/Cancel_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_reason__c</fullName>
    <description>Why the order was cancelled. Required on the cancelled stage.</description>
    <label>Cancel reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock unavailable</fullName>
            </value>
            <value>
                <fullName>Retailer cancelled</fullName>
            </value>
            <value>
                <fullName>Credit hold</fullName>
            </value>
            <value>
                <fullName>Payment failed</fullName>
            </value>
            <value>
                <fullName>Duplicate order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>