blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/fields/Order_channel__c.field-meta.xml
<CustomField>
    <fullName>Order_channel__c</fullName>
    <description>How the order was placed. Used to see how much sells through the portal and how much through reps.</description>
    <label>Order channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wholesale portal</fullName>
            </value>
            <value>
                <fullName>Rep</fullName>
            </value>
            <value>
                <fullName>Trade show</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>