blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/fields/Order_date__c.field-meta.xml
<CustomField>
    <fullName>Order_date__c</fullName>
    <description>Date the order was placed.</description>
    <label>Order date</label>
    <type>Date</type>
</CustomField>