blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/fields/Order_type__c.field-meta.xml
<CustomField>
    <fullName>Order_type__c</fullName>
    <description>Whether this is the retailer's first order or a reorder. Used to report the reorder rate.</description>
    <label>Order type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First order</fullName>
            </value>
            <value>
                <fullName>Reorder</fullName>
            </value>
            <value>
                <fullName>Pre-order</fullName>
            </value>
            <value>
                <fullName>Sample order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>