blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/fields/Order_value__c.field-meta.xml
<CustomField>
    <fullName>Order_value__c</fullName>
    <description>Total wholesale value excluding tax.</description>
    <label>Order value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>