blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/fields/Placed_by__c.field-meta.xml
<CustomField>
    <fullName>Placed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records which buyer placed the order.</description>
    <label>Placed by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders placed</relationshipLabel>
    <relationshipName>Orders_placed</relationshipName>
    <type>Lookup</type>
</CustomField>