blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows the full order history for each retailer.</description>
    <label>Retailer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Wholesale orders</relationshipLabel>
    <relationshipName>Wholesale_orders</relationshipName>
    <type>Lookup</type>
</CustomField>