blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>The collection the order is for. Used for seasonal reorder analysis.</description>
    <label>Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spring/summer</fullName>
            </value>
            <value>
                <fullName>Autumn/winter</fullName>
            </value>
            <value>
                <fullName>Christmas</fullName>
            </value>
            <value>
                <fullName>Year-round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>