blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/fields/Ship_date__c.field-meta.xml
<CustomField>
    <fullName>Ship_date__c</fullName>
    <description>Date the order is promised to leave, or left, the warehouse.</description>
    <label>Ship date</label>
    <type>Date</type>
</CustomField>