blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/validationRules/Gate_order_status_picking.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_order_status_picking</fullName>
    <active>true</active>
    <description>Stage gate: Order status, Picking and later stages need Ship date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Placed", 1, "Confirmed", 2, "Picking", 3, "Shipped", 4, "Delivered and paid", 5, 0) &gt;= 3, ISBLANK(Ship_date__c))</errorConditionFormula>
    <errorDisplayField>Ship_date__c</errorDisplayField>
    <errorMessage>Fill in Ship date before moving to Picking.</errorMessage>
</ValidationRule>