blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Wholesale_Order__c/validationRules/Lost_order_status_cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_order_status_cancelled</fullName>
    <active>true</active>
    <description>Lost reason: Order status, Cancelled needs Cancel reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Cancelled"), ISBLANK(TEXT(Cancel_reason__c)))</errorConditionFormula>
    <errorDisplayField>Cancel_reason__c</errorDisplayField>
    <errorMessage>Fill in Cancel reason before closing this as Cancelled.</errorMessage>
</ValidationRule>